# mcs-zed-cpp-debug-conf

./: CMakeLists.txt
.zed/: debug.json
